--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "react-native-boilerplate",
   "version": "0.0.0",
   "description": "Hello Expo!",
-  "author": null,
+  "author": "Pedro Valdivieso",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "expo": "^19.0.0",
+    "lodash": "^4.17.4",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
-    "react-navigation": "^1.0.0-beta.11"
+    "react-navigation": "^1.0.0-beta.11",
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "eslint-config-rallycoding": "^3.2.0"
